--- a/requirements.txt
+++ b/requirements.txt
@@ -36,6 +36,7 @@ pymongo>=4.5.0
 openai>=1.0.0
 transformers>=4.33.0
 sentence-transformers>=2.2.0
+torch==2.3.0+cpu
 
 # 유틸리티
 python-multipart>=0.0.6
